--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ div.stMainBlockContainer.block-container.st-emotion-cache-1jicfl2.ea3mdgi5{
     background-color: white;
 }
 
-div.st-emotion-cache-4uzi61.e1f1d6gn0{
+div.st-emotion-cache-4uzi61.eiemyj5{
     border-radius: 10px;
     background-color: #FFEB00;
     margin: 10px;
