--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ div.stColumn.st-emotion-cache-1r6slb0.e1f1d6gn3 {
     border-radius: 10px;
 }
 
-div.stVerticalBlock.st-emotion-cache-7alizx.e1f1d6gn2{
+div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
     background-color: white;
     border-radius: 10px;
 }
@@ -35,7 +35,7 @@ div.st-emotion-cache-1wmy9hl.e1f1d6gn1{
     border-radius: 10px;
 }
 
-div.stExpander.st-emotion-cache-0.eqpbllx4{
+div.st-emotion-cache-s1invk.enj44ev3{
     background-color: white
 
 }
