--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
     border-radius: 10px;
 }
 
+div.stVerticalBlock.st-emotion-cache-t9yc3p.eiemyj3{
+    background-color: white;
+    border-radius: 10px;    
+}
+
 div.stHorizontalBlock.st-emotion-cache-ocqkz7.e1f1d6gn5{
     background-color: white;
     border-radius: 10px;
@@ -35,7 +40,7 @@ div.st-emotion-cache-1wmy9hl.e1f1d6gn1{
     border-radius: 10px;
 }
 
-div.st-emotion-cache-s1invk.enj44ev3{
+div.st-emotion-cache-1h9usn1 enj44ev1{
     background-color: white
 
 }
