--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
+    background-color: white;
+    border-radius: 10px;
+}
+
+div.stVerticalBlock.st-emotion-cache-t9yc3p.eiemyj3{
+    background-color: white;
+    border-radius: 10px;    
+}
+
+div.stExpander.st-emotion-cache-0.enj44ev0{
+    background-color: white
+}
+
+
+
+
+
+
 div.stMainBlockContainer.block-container.st-emotion-cache-1jicfl2.ea3mdgi5{
     background-color: white;
 }
@@ -20,15 +39,7 @@ div.stColumn.st-emotion-cache-1r6slb0.e1f1d6gn3 {
     border-radius: 10px;
 }
 
-div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
-    background-color: white;
-    border-radius: 10px;
-}
 
-div.stVerticalBlock.st-emotion-cache-t9yc3p.eiemyj3{
-    background-color: white;
-    border-radius: 10px;    
-}
 
 div.stHorizontalBlock.st-emotion-cache-ocqkz7.e1f1d6gn5{
     background-color: white;
@@ -40,10 +51,7 @@ div.st-emotion-cache-1wmy9hl.e1f1d6gn1{
     border-radius: 10px;
 }
 
-div.st-emotion-cache-1h9usn1 enj44ev1{
-    background-color: white
 
-}
 
 
 /* text */
