--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ div.stExpander.st-emotion-cache-0.enj44ev0{
 
 
 /* Sidebar */
-stSidebar st-emotion-cache-vmpjyt e1dbuyne0 {
+stSidebar.st-emotion-cache-vmpjyt.e1dbuyne0 {
     background-color: #577BC1;
 }
 
