--- a/style.css
+++ b/style.css
@@ -14,10 +14,23 @@ div.stExpander.st-emotion-cache-0.enj44ev0{
 }
 
 
+/* Kumpulan Data */
+div.st-emotion-cache-4uzi61.eiemyj5{
+    background-color: white;
+}
+
+
 
 /* Sidebar */
 div.st-emotion-cache-6qob1r.e1dbuyne8 {
     background-color: #577BC1;
+}
+
+
+
+/* Tulisan */
+div.st-emotion-cache-89jlt8 e121c1cl0{
+    color: black;
 }
 
 
