--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div.stExpander.st-emotion-cache-0.enj44ev0{
 
 
 /* Kumpulan Data */
-div.st-emotion-cache-b95f0i.eiemyj4{
+div.st-emotion-cache-4uzi61.eiemyj5{
     background-color: white;
     border-radius: 10px;
 }
