--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div.stExpander.st-emotion-cache-0.enj44ev0{
 
 
 /* Kumpulan Data */
-div.st-emotion-cache-4uzi61.eiemyj5{
+div.stVerticalBlock.st-emotion-cache-1args6c.eiemyj3{
     background-color: white;
     border-radius: 10px;
 }
