--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /* Home */
+div.st-emotion-cache-4uzi61.eiemyj5{
+    border-radius: 10px;
+    background-color: #FFEB00;
+    margin: 10px;
+    box-shadow: 7px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
 div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
     background-color: white;
     border-radius: 10px;
