--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ div.st-emotion-cache-4uzi61.eiemyj5{
     box-shadow: 7px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
+div.stVerticalBlock st-emotion-cache-4f385u.eiemyj3{
+    background-color: white;
+}
+
 div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
     background-color: white;
     border-radius: 10px;
