--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ div.st-emotion-cache-4uzi61.eiemyj5{
 
 div.stVerticalBlock.st-emotion-cache-4f385u.eiemyj3{
     background-color: white;
+    margin: 7px;
 }
 
 div.stVerticalBlock.st-emotion-cache-112g0wn.eiemyj3{
@@ -22,6 +23,10 @@ div.stVerticalBlock.st-emotion-cache-t9yc3p.eiemyj3{
 
 div.stExpander.st-emotion-cache-0.enj44ev0{
     background-color: white
+}
+
+div.stHorizontalBlock.st-emotion-cache-ocqkz7.eiemyj0{
+    background-color: white;
 }
 
 
